--- a/GaitSymQt/DialogGlobal.ui
+++ b/GaitSymQt/DialogGlobal.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>658</width>
-    <height>782</height>
+    <width>724</width>
+    <height>792</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -115,16 +115,6 @@
       <string>Select</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_9">
-      <item row="0" column="2">
-       <widget class="QComboBox" name="comboBoxFitnessType">
-        <property name="minimumSize">
-         <size>
-          <width>201</width>
-          <height>0</height>
-         </size>
-        </property>
-       </widget>
-      </item>
       <item row="0" column="1">
        <widget class="QLabel" name="label_8">
         <property name="text">
@@ -145,15 +135,28 @@
         </property>
        </spacer>
       </item>
-      <item row="1" column="2">
-       <widget class="QComboBox" name="comboBoxDistanceTravelledBodyIDName"/>
-      </item>
-      <item row="1" column="1">
-       <widget class="QLabel" name="label_10">
-        <property name="text">
-         <string>Reference Body</string>
+      <item row="0" column="2">
+       <widget class="QComboBox" name="comboBoxFitnessType">
+        <property name="minimumSize">
+         <size>
+          <width>201</width>
+          <height>0</height>
+         </size>
         </property>
        </widget>
+      </item>
+      <item row="1" column="0">
+       <spacer name="verticalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
       </item>
      </layout>
     </widget>
@@ -609,7 +612,6 @@
   <tabstop>checkBoxAllowConnectedCollisions</tabstop>
   <tabstop>checkBoxAllowInternalCollisions</tabstop>
   <tabstop>comboBoxFitnessType</tabstop>
-  <tabstop>comboBoxDistanceTravelledBodyIDName</tabstop>
   <tabstop>lineEditContactMaxCorrectingVel</tabstop>
   <tabstop>lineEditContactSurfaceLayer</tabstop>
   <tabstop>lineEditTimeLimit</tabstop>
