loading a reduced polygone datatarget because there can be a lot of these

--- a/GaitSymQt/resources.qrc
+++ b/GaitSymQt/resources.qrc
@@ -36,5 +36,6 @@
         <file>preferences/default_values.xml</file>
         <file>objects/axes.tri</file>
         <file>objects/global_axes.tri</file>
+        <file>objects/datatarget.tri</file>
     </qresource>
 </RCC>
