--- a/GaitSymQt/resources.qrc
+++ b/GaitSymQt/resources.qrc
@@ -16,6 +16,7 @@
         <file>images/New Model Icon/New Model Classic Icon.svg</file>
         <file>images/Save As Icon/Save As Icon.svg</file>
         <file>images/Save As Icon/Save Icon.svg</file>
+        <file>images/Shadow Icon/Shadow Icon.svg</file>
         <file>images/Snapshot Icon/Snapshot Icon.svg</file>
         <file>images/View Direction Icons/View Direction Back.svg</file>
         <file>images/View Direction Icons/View Direction Bottom.svg</file>
@@ -23,6 +24,7 @@
         <file>images/View Direction Icons/View Direction Left.svg</file>
         <file>images/View Direction Icons/View Direction Right.svg</file>
         <file>images/View Direction Icons/View Direction Top.svg</file>
+        <file>images/Wireframe Icon/Wireframe Icon.svg</file>
         <file>images/XMLMachine Icons/go-down.svg</file>
         <file>images/XMLMachine Icons/go-up.svg</file>
         <file>images/XMLMachine Icons/list-add.svg</file>
