--- a/GaitSymQt/DialogConvertFile.ui
+++ b/GaitSymQt/DialogConvertFile.ui
@@ -6,30 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>509</width>
-    <height>197</height>
+    <width>482</width>
+    <height>314</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout_2">
-   <item row="0" column="0" colspan="5">
+  <layout class="QGridLayout" name="gridLayout_3">
+   <item row="0" column="0" colspan="3">
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
       <string>Files</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="1" column="0">
-       <widget class="QPushButton" name="pushButtonOutputFile">
-        <property name="text">
-         <string>OutputFile...</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="LineEditPath" name="lineEditOutputFile"/>
-      </item>
       <item row="0" column="0">
        <widget class="QPushButton" name="pushButtonInputFile">
         <property name="text">
@@ -37,36 +27,35 @@
         </property>
        </widget>
       </item>
+      <item row="1" column="1">
+       <widget class="LineEditPath" name="lineEditOutputFile"/>
+      </item>
       <item row="0" column="1">
        <widget class="LineEditPath" name="lineEditInputFile"/>
       </item>
-      <item row="2" column="0">
-       <spacer name="verticalSpacer">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
+      <item row="1" column="0">
+       <widget class="QPushButton" name="pushButtonOutputFile">
+        <property name="text">
+         <string>OutputFile...</string>
         </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
+       </widget>
       </item>
      </layout>
     </widget>
    </item>
-   <item row="1" column="3">
-    <widget class="QPushButton" name="pushButtonOK">
-     <property name="toolTip">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Convert file and close dialog&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   <item row="1" column="0" colspan="3">
+    <widget class="QGroupBox" name="groupBox_2">
+     <property name="title">
+      <string>Log</string>
      </property>
-     <property name="text">
-      <string>OK</string>
-     </property>
+     <layout class="QGridLayout" name="gridLayout_2">
+      <item row="0" column="0">
+       <widget class="QPlainTextEdit" name="plainTextEdit"/>
+      </item>
+     </layout>
     </widget>
    </item>
-   <item row="1" column="1">
+   <item row="2" column="0">
     <widget class="QPushButton" name="pushButtonConvert">
      <property name="toolTip">
       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Convert file and leave dialog open&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -76,14 +65,7 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="4">
-    <widget class="QPushButton" name="pushButtonCancel">
-     <property name="text">
-      <string>Cancel</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="2">
+   <item row="2" column="1">
     <spacer name="horizontalSpacer">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -95,6 +77,13 @@
       </size>
      </property>
     </spacer>
+   </item>
+   <item row="2" column="2">
+    <widget class="QPushButton" name="pushButtonClose">
+     <property name="text">
+      <string>Close</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
@@ -110,8 +99,7 @@
   <tabstop>lineEditInputFile</tabstop>
   <tabstop>pushButtonOutputFile</tabstop>
   <tabstop>lineEditOutputFile</tabstop>
-  <tabstop>pushButtonOK</tabstop>
-  <tabstop>pushButtonCancel</tabstop>
+  <tabstop>pushButtonClose</tabstop>
  </tabstops>
  <resources/>
  <connections/>
