--- a/GaitSymQt/MainWindow.ui
+++ b/GaitSymQt/MainWindow.ui
@@ -21,7 +21,7 @@
     <item row="0" column="0">
      <widget class="QSplitter" name="splitter2">
       <property name="orientation">
-       <enum>Qt::Vertical</enum>
+       <enum>Qt::Orientation::Vertical</enum>
       </property>
       <widget class="QWidget" name="widget" native="true">
        <layout class="QGridLayout" name="gridLayout_9">
@@ -43,7 +43,7 @@
         <item row="0" column="0">
          <widget class="QSplitter" name="splitter1">
           <property name="orientation">
-           <enum>Qt::Horizontal</enum>
+           <enum>Qt::Orientation::Horizontal</enum>
           </property>
           <widget class="QScrollArea" name="scrollAreaLeft">
            <property name="font">
@@ -57,8 +57,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>194</width>
-              <height>884</height>
+              <width>146</width>
+              <height>637</height>
              </rect>
             </property>
             <layout class="QGridLayout" name="gridLayout_10">
@@ -136,7 +136,7 @@
                    <bool>true</bool>
                   </property>
                   <property name="focusPolicy">
-                   <enum>Qt::WheelFocus</enum>
+                   <enum>Qt::FocusPolicy::WheelFocus</enum>
                   </property>
                   <property name="toolTip">
                    <string>Distance of the viewpoint from the centre of view</string>
@@ -592,7 +592,7 @@
                    <number>10</number>
                   </property>
                   <property name="segmentStyle">
-                   <enum>QLCDNumber::Flat</enum>
+                   <enum>QLCDNumber::SegmentStyle::Flat</enum>
                   </property>
                  </widget>
                 </item>
@@ -729,7 +729,7 @@
              <item row="4" column="0">
               <spacer name="verticalSpacer">
                <property name="orientation">
-                <enum>Qt::Vertical</enum>
+                <enum>Qt::Orientation::Vertical</enum>
                </property>
                <property name="sizeHint" stdset="0">
                 <size>
@@ -862,8 +862,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>362</width>
-              <height>467</height>
+              <width>346</width>
+              <height>445</height>
              </rect>
             </property>
             <layout class="QGridLayout" name="gridLayout_7">
@@ -922,7 +922,7 @@
                 <item row="0" column="0">
                  <widget class="ElementTreeWidget" name="treeWidgetElements">
                   <property name="editTriggers">
-                   <set>QAbstractItemView::NoEditTriggers</set>
+                   <set>QAbstractItemView::EditTrigger::NoEditTriggers</set>
                   </property>
                   <property name="sortingEnabled">
                    <bool>false</bool>
@@ -969,8 +969,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>1137</width>
-          <height>309</height>
+          <width>1143</width>
+          <height>358</height>
          </rect>
         </property>
         <layout class="QGridLayout" name="gridLayout_11">
@@ -1007,7 +1007,7 @@
                <cursorShape>IBeamCursor</cursorShape>
               </property>
               <property name="lineWrapMode">
-               <enum>QTextEdit::NoWrap</enum>
+               <enum>QTextEdit::LineWrapMode::NoWrap</enum>
               </property>
               <property name="readOnly">
                <bool>true</bool>
@@ -1016,7 +1016,7 @@
                <bool>false</bool>
               </property>
               <property name="textInteractionFlags">
-               <set>Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+               <set>Qt::TextInteractionFlag::TextSelectableByKeyboard|Qt::TextInteractionFlag::TextSelectableByMouse</set>
               </property>
              </widget>
             </item>
@@ -1036,7 +1036,7 @@
      <x>0</x>
      <y>0</y>
      <width>1157</width>
-     <height>21</height>
+     <height>18</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -1055,6 +1055,7 @@
       <string>Export</string>
      </property>
      <addaction name="actionExportOpenSim"/>
+     <addaction name="actionExportMuJoCo"/>
     </widget>
     <widget class="QMenu" name="menuImport_Playback">
      <property name="title">
@@ -1757,7 +1758,7 @@
     <string>Displays scene as a wireframe</string>
    </property>
    <property name="menuRole">
-    <enum>QAction::ApplicationSpecificRole</enum>
+    <enum>QAction::MenuRole::ApplicationSpecificRole</enum>
    </property>
   </action>
   <action name="actionDisplayShadows">
@@ -1775,7 +1776,7 @@
     <string>Toggles the shadow display</string>
    </property>
    <property name="menuRole">
-    <enum>QAction::ApplicationSpecificRole</enum>
+    <enum>QAction::MenuRole::ApplicationSpecificRole</enum>
    </property>
   </action>
   <action name="actionPlaybackOpenSimBodyKinematics">
@@ -1797,6 +1798,11 @@
   <action name="actionConvertFile">
    <property name="text">
     <string>Convert File...</string>
+   </property>
+  </action>
+  <action name="actionExportMuJoCo">
+   <property name="text">
+    <string>MuJoCo...</string>
    </property>
   </action>
  </widget>
