Renamed TextEditDialog to DialogRawXMLEdit

--- a/GaitSymQt/DialogRawXMLEdit.ui
+++ b/GaitSymQt/DialogRawXMLEdit.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>TextEditDialog</class>
- <widget class="QDialog" name="TextEditDialog">
+ <class>DialogRawXMLEdit</class>
+ <widget class="QDialog" name="DialogRawXMLEdit">
   <property name="geometry">
    <rect>
     <x>0</x>
