Renamed AboutDialog to DialogAbout

--- a/GaitSymQt/DialogAbout.ui
+++ b/GaitSymQt/DialogAbout.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>AboutDialog</class>
- <widget class="QDialog" name="AboutDialog">
+ <class>DialogAbout</class>
+ <widget class="QDialog" name="DialogAbout">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -197,7 +197,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
   <connection>
    <sender>pushButtonOK</sender>
    <signal>clicked()</signal>
-   <receiver>AboutDialog</receiver>
+   <receiver>DialogAbout</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
