--- a/GaitSymQt/DialogStringOfPearlsBuilder.ui
+++ b/GaitSymQt/DialogStringOfPearlsBuilder.ui
@@ -550,22 +550,22 @@
        <item row="1" column="0">
         <widget class="QLabel" name="label_6">
          <property name="text">
-          <string>Origin Body ID</string>
+          <string>Origin Marker  ID</string>
          </property>
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QComboBox" name="comboBoxOriginBodyID"/>
+        <widget class="QComboBox" name="comboBoxOriginMarkerID"/>
        </item>
        <item row="2" column="0">
         <widget class="QLabel" name="label_7">
          <property name="text">
-          <string>Insertion Body ID</string>
+          <string>Insertion Marker ID</string>
          </property>
         </widget>
        </item>
        <item row="2" column="1">
-        <widget class="QComboBox" name="comboBoxInsertionBodyID"/>
+        <widget class="QComboBox" name="comboBoxInsertionMarkerID"/>
        </item>
        <item row="3" column="0" colspan="2">
         <widget class="QWidget" name="widget_2" native="true">
@@ -722,8 +722,8 @@
   <tabstop>lineEditDamping</tabstop>
   <tabstop>lineEditBreakingStrain</tabstop>
   <tabstop>tableWidget</tabstop>
-  <tabstop>comboBoxOriginBodyID</tabstop>
-  <tabstop>comboBoxInsertionBodyID</tabstop>
+  <tabstop>comboBoxOriginMarkerID</tabstop>
+  <tabstop>comboBoxInsertionMarkerID</tabstop>
   <tabstop>comboBoxImportFromMuscle</tabstop>
   <tabstop>pushButtonImportPathFromMuscle</tabstop>
   <tabstop>pushButtonProperties</tabstop>
